# okura

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  setup_dict.py
app/: main.py
app/core/: database.py
app/crud/: vocabulaire.py
app/routers/: vocabulaire.py
app/schemas/: vocabulaire.py
app/services/: nlp.py
data/: jamdict.db
static/: app.js  index.html  style.css
tests/: test_api.py
